--- a/Facturas_UPS.ipynb
+++ b/Facturas_UPS.ipynb
@@ -70,7 +70,7 @@
     "    # Configuración del correo\n",
     "    \n",
     "    # 🔹 Lista de destinatarios\n",
-    "    recipient_list = [\"ecalderon@maxwarehouse.com\"]\n",
+    "    recipient_list = [\"\"]\n",
     "    \n",
     "    # Contenido del correo\n",
     "    subject = \"🔔 Alerta: Inicio de descarga de facturas de UPS\"\n",
@@ -177,7 +177,7 @@
     "time.sleep(3)  # Esperar a que la página actualice los resultados\n",
     "\n",
     "# 5️⃣ Esperar y manejar el popup de privacidad si está presente\n",
-    "# Intentamos esperar un poco para asegurarnos de que el popup se haya mostrado y luego lo cerramos\n",
+    "# \n",
     "try:\n",
     "    # Esperamos hasta que el popup de privacidad esté visible y lo cerramos si aparece\n",
     "    privacy_popup = wait.until(EC.presence_of_element_located((By.CLASS_NAME, \"implicit_privacy_prompt\")))\n",
@@ -190,10 +190,10 @@
     "# 6️⃣ Esperar un poco para asegurarnos de que el popup se haya cerrado\n",
     "time.sleep(2)\n",
     "\n",
-    "# 7️⃣ Forzar el clic en el botón \"Apply\" usando JavaScript\n",
+    "# 7️⃣ Forzar el clic en el botón \"Apply\" \n",
     "apply_button = wait.until(EC.element_to_be_clickable((By.XPATH, \"//*[@id='invoice-search-date-btn-apply']\")))\n",
     "\n",
-    "# Usamos JavaScript para hacer clic en el botón\n",
+    "\n",
     "driver.execute_script(\"arguments[0].click();\", apply_button)\n",
     "time.sleep(3)  # Esperar a que el filtro se aplique\n",
     "\n",
@@ -214,49 +214,6 @@
     "option_mostrar_todos.click()\n",
     "\n",
     "time.sleep(3)  # Esperar a que los elementos se carguen con la nueva configuración\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e479b11e-37f3-4c41-9ac4-7c379cac0cf4",
-   "metadata": {},
-   "source": [
-    "# 1️⃣ Esperar a que la tabla esté presente\n",
-    "factura_filas = wait.until(EC.presence_of_all_elements_located((By.XPATH, \"//*[@id='invoice-table_wrapper']/div[2]/div/table/tbody/tr\")))\n",
-    "\n",
-    "# 2️⃣ Iterar sobre cada fila y hacer clic en el botón de descarga\n",
-    "for index, fila in enumerate(factura_filas, start=1):  \n",
-    "    try:\n",
-    "        # Construir XPath dinámico para el botón del menú desplegable (columna 7)\n",
-    "        xpath_boton_menu = f\"//*[@id='invoice-table_wrapper']/div[2]/div/table/tbody/tr[{index}]/td[11]/div\"\n",
-    "\n",
-    "        # Hacer scroll hasta la fila actual\n",
-    "        driver.execute_script(\"arguments[0].scrollIntoView({block: 'center'});\", fila)\n",
-    "\n",
-    "        # Esperar a que el botón del menú sea interactuable y hacer clic\n",
-    "        boton_menu = wait.until(EC.element_to_be_clickable((By.XPATH, xpath_boton_menu)))\n",
-    "\n",
-    "        # Usar ActionChains para evitar \"element click intercepted\"\n",
-    "        ActionChains(driver).move_to_element(boton_menu).click().perform()\n",
-    "\n",
-    "        # 🔹 Esperar hasta que el menú esté completamente cargado\n",
-    "        time.sleep(2)  # Pequeño delay para asegurar que el menú se abre\n",
-    "\n",
-    "        # 🔹 Esperar a que aparezca la opción de descarga CSV (usando XPath flexible)\n",
-    "        opcion_csv = wait.until(EC.element_to_be_clickable((By.XPATH, \"//button[contains(@id, 'dropdown-download-inv') and contains(@id, '-CSV')]\")))\n",
-    "\n",
-    "        # Hacer clic en la opción de descarga CSV\n",
-    "        opcion_csv.click()\n",
-    "\n",
-    "        # Pequeña pausa para evitar sobrecarga de clics\n",
-    "        time.sleep(45)  # 5 segundos en lugar de 30, ajusta según sea necesario\n",
-    "\n",
-    "        print(f\"✅ Factura {index} descargada correctamente.\")\n",
-    "\n",
-    "    except Exception as e:\n",
-    "        print(f\"⚠️ Error al descargar la factura en la fila {index}: {e}\")\n",
-    "\n",
-    "print(\"✅ Descarga completada.\")\n"
    ]
   },
   {
@@ -289,7 +246,7 @@
     "\n",
     "    \n",
     "    # Lista de destinatarios\n",
-    "    recipient_list = [\"ecalderon@maxwarehouse.com\"]\n",
+    "    recipient_list = [\"\"]\n",
     "    \n",
     "    # Crear la lista numerada de facturas descargadas\n",
     "    facturas_descargadas_str = \"\\n\".join([f\"{index}. {factura}\" for index, factura in enumerate(facturas_descargadas, 1)])\n",
